src/objects/PradeepTestingOrg1__c.object
<CustomObject>
    <fields>
        <fullName>checkbox1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkbox1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkbox2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkbox2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>currency1__c</fullName>
        <label>currency1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>date1__c</fullName>
        <label>date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>email1__c</fullName>
        <label>email1</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>number1__c</fullName>
        <label>number1</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number__c</fullName>
        <label>number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>phone1__c</fullName>
        <label>phone1</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>text11__c</fullName>
        <label>text11</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>